# spin-archive.org

./: .dockerignore  .gitignore  .prettierignore  CHECKS  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  package-lock.json  package.json  rust-toolchain  sqlx-data.json  webpack.config.js
assets/css/: forum.css  index.css  login.css  reset.css
assets/js/: index.js
migrations/: 20220420045621_initial.sql  20220420054026_rename_fize_name.sql  20220420054817_rename_file_text.sql
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-05-09-013840_create_users/: up.sql
migrations/2020-05-12-204637_create_user_roles/: down.sql  up.sql
migrations/2020-05-13-015619_create_uploads/: down.sql  up.sql
migrations/2020-05-14-020116_add_ext_to_uploads/: down.sql  up.sql
migrations/2020-05-16-213028_set_default_tag_index/: up.sql
migrations/2020-05-17-205914_add_video_encoding_key/: down.sql  up.sql
migrations/2020-05-18-235312_create_views/: down.sql  up.sql
migrations/2020-05-19-004328_add_description_to_uploads/: down.sql  up.sql
migrations/2020-05-19-040512_create_audit_log/: down.sql  up.sql
migrations/2020-05-21-031426_add_delete_cascade_to_upload_views/: up.sql
migrations/2020-05-21-033414_add_viewed_at_to_upload_views/: down.sql  up.sql
migrations/2020-05-22-030721_add_original_upload_date_to_uploads/: down.sql  up.sql
migrations/2020-05-22-035047_add_upload_comments/: down.sql  up.sql
migrations/2020-05-23-195520_create_tags/: down.sql  up.sql
migrations/2020-05-23-222858_add_upload_count_to_tags/: down.sql  up.sql
migrations/2020-05-26-005949_add_daily_upload_limit_to_users/: down.sql  up.sql
migrations/2020-05-29-185718_add_api_tokens/: down.sql  up.sql
migrations/2020-06-18-065428_remove_unique_md5_constraint/: up.sql
migrations/2020-06-29-015925_add_file_name_index/: up.sql
migrations/2020-07-01-004454_add_forums/: down.sql  up.sql
migrations/2020-07-07-032657_add_invitations/: up.sql
seeds/: 000_default_forums.sql
src/: api.rs  config.rs  context.rs  database.rs  main.rs  pagination.rs  s3_client.rs  schema.rs  template_utils.rs  templates.rs
src/ingestors/: errors.rs  mod.rs  twitter.rs
src/models/: api_token.rs  audit_log.rs  forum.rs  invitation.rs  (+7 more)
templates/: about.html.tera  base.html  base.html.tera  base.rs.html  empty.rs.html  footer.html.tera  footer.rs.html  index.html  index.html.tera  index.rs.html  log.html.tera  login.html.tera  register.html.tera  upload.html  upload.html.tera
(+90 files in other folders)
