[package]
name = "spin-archive"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", default-features = false, features = ["serve", "diesel_postgres_pool", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
log = "0.4.8"
rust-argon2 = "0.8.2"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
nanoid = "0.3.0"
mime_guess = "2.0.3"
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
rusoto_credential = "0.43.0"
diesel_full_text_search = "1.0.1"
reqwest = { version = "0.10.4", features = ["json", "blocking", "stream"] }
regex = "1.3.7"
timeago = "0.2.1"
lazy_static = "1.4.0"
egg-mode = { git = "https://github.com/andrewvy/egg-mode" }
thiserror = "1.0.19"
anyhow = "1.0.31"
tokio = { version = "1.8.4", features = ["fs"] }
tempfile = "3.1.0"
tokio-util = "0.3.1"
url = "2.1.1"
comrak = "0.7.0"
funty = "=1.1.0"

[build-dependencies]
ructe = "0.13.0"